--- a/my-app/src/styles/Footer.css
+++ b/my-app/src/styles/Footer.css
@@ -4,6 +4,7 @@
     border-top: 2px solid #5a3e36;
     box-shadow: 12px 20px 20px rgba(0, 0, 0, 0.701) ;
     background-color: black;
+    flex-wrap: wrap;
     
 }
 .logo-container{
