--- a/my-app/src/styles/Inspo.css
+++ b/my-app/src/styles/Inspo.css
@@ -1,10 +1,9 @@
 
 
-.inspo-container {
+.inspo1-container {
     background-color: #3a3a3a;
     padding: 50px 20px;
     display: flex;
-    flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
 }
